# breakout

./: .gitignore  CMakeLists.txt  README.md
dependencies/compile/: ttf2mesh.c
dependencies/include/glad/: gl.h
res/fonts/: charset.txt
res/levels-scenes/: plane.json
res/models/gorilla/: Gorilla_hd.fbx
res/msdf-fonts/: JetBrainsMono-Bold.json  OpenSans-Light.json  roboto.json
res/scenes/: plane.json  sponza.json
shaders/basic/: .frag
shaders/blur/: .frag  .vert
shaders/colorTexture/: .frag  .vert
shaders/drawText/: .frag  .vert
shaders/fontAtlas/: .frag  .vert
shaders/grid/: .frag  .vert
shaders/hdrImage/: .frag  .vert
shaders/oitComposite/: .frag  .vert
shaders/oitTransparent/: .frag
shaders/plainColor/: .frag
shaders/prop/: .frag  .vert
shaders/transparent/: .frag  .vert
src/: main.cpp
src/game/: AABB.hpp  Animator.cpp  Animator.hpp  Controller.cpp  Controller.hpp  EaseFunctions.hpp  GameMain.cpp  GameMain.hpp  LevelParcer.cpp  LevelParcer.hpp  LevelParser.cpp  LevelParser.hpp  Lighting.hpp  Physics.cpp  Physics.hpp  PhysicsComponents.hpp  PhysicsSystem.cpp  PhysicsSystem.hpp  Renderer.cpp  Renderer.hpp
src/opengl/: Framebuffer.cpp  Framebuffer.hpp  IndexBuffer.cpp  IndexBuffer.hpp  Object.hpp  Shader.cpp  Shader.hpp  ShaderStorage.cpp  ShaderStorage.hpp  Texture.cpp  Texture.hpp  VertexBuffer.cpp  VertexBuffer.hpp
src/utils/: AABB.hpp  Camera.cpp  Camera.hpp  ControllableCamera.cpp  ControllableCamera.hpp  ECS.cpp  ECS.hpp  Model.cpp  Model.hpp  Resource.cpp  Resource.hpp  Text.cpp  Text.hpp
